# intentional-rescue

./: .gitignore  README.md  pyproject.toml
docs/: CONCEPT.md
src/: agents.py  build_slides.py  chyron.py  easing.py  main.py  palette.py  render.py  scene.py  smoke.py  world.py
